sumo/tests/traci/VariableRetrieval/Polygon/errors/UnknownID/testclient.prog
simstep 5 1
getvariable 0xa8 0x45 xxx
simstep 6 1
